Created first unit test and updated README.md